[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Game/SoundSystem/TestSoundSystem.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/DebugUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Game/SoundSystem/SoundSystem.tscn" type="PackedScene" id=3]

[node name="TestSoundSystem" type="Spatial"]
script = ExtResource( 1 )

[node name="SoundSystem" parent="." instance=ExtResource( 3 )]

[node name="DebugUI" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DamageButton" type="Button" parent="CanvasLayer"]
margin_left = 364.0
margin_top = 120.0
margin_right = 537.0
margin_bottom = 171.0
rect_pivot_offset = Vector2( 104, 27 )
text = "Damage player"

[node name="CrystalGreenButton" type="Button" parent="CanvasLayer"]
margin_left = 365.0
margin_top = 197.0
margin_right = 538.0
margin_bottom = 248.0
text = "Collect green"

[node name="CrystalPurpleButton" type="Button" parent="CanvasLayer"]
margin_left = 367.0
margin_top = 270.0
margin_right = 540.0
margin_bottom = 321.0
text = "Collect Purple"

[node name="PauseButton" type="Button" parent="CanvasLayer"]
margin_left = 366.0
margin_top = 353.0
margin_right = 539.0
margin_bottom = 404.0
rect_pivot_offset = Vector2( 144, 10 )
text = "Pause"

[connection signal="pressed" from="CanvasLayer/DamageButton" to="." method="_on_DamageButton_pressed"]
[connection signal="pressed" from="CanvasLayer/CrystalGreenButton" to="." method="_on_CrystalGreenButton_pressed"]
[connection signal="pressed" from="CanvasLayer/CrystalPurpleButton" to="." method="_on_CrystalPurpleButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseButton" to="." method="_on_PauseButton_pressed"]
